# wire-operator

./: Cargo.toml  flake.nix
src/: main.rs
