[package]
name = "wire-operator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.58.1", features = ["derive"] }
kube-derive = "0.58.1"
kube-runtime  = { version = "0.58.1" }
serde = "*"
serde_json = "*"
schemars = "*"
futures = "*"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
tokio = { vesion = "*", features = ["macros" , "rt-multi-thread" ]}
